adjusting the feather

--- a/root folder/css1/style.css
+++ b/root folder/css1/style.css
@@ -338,4 +338,10 @@ mark {
     display: block;
 }
 
+.icon-link {
+    text-decoration: none;
+    font-size: 48px auto;
+    padding: 26px;
+  }
+
 
