--- a/root folder/css1/style.css
+++ b/root folder/css1/style.css
@@ -340,12 +340,17 @@ mark {
 
 .icon-link {
     text-decoration: none;
-    font-size: 48px auto;
+    font-size: 48px ;
     padding: 26px;
+    background-color: green;
   }
   .feather-fixed {
     position: fixed;
     bottom: 0;
     left: 0;
+  }
+  .social-links {
+    display: flex;
+    gap: 20px;
   }
 
