--- a/root folder/css1/style.css
+++ b/root folder/css1/style.css
@@ -333,10 +333,14 @@ mark {
   margin-top: 20px;
 }
 .personal-info p {
-  color: #ffffff;
+  color: black;
   margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 1.5em;
 }
 .personal-info a {
   margin: 5px;
   display: inline-block;
+  text-decoration: none;
+  font-weight: bold;
 }
